[metadata]
name = artellapipe
description = Framework to create generic Artella based pipelines
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    six
    psutil
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt
    pyblish-base
    pyblish-lite
    lucidity
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    python-json-logger
    sentry-sdk
    pyyaml
    metayaml
    appdirs
    slackclient
    FileSeq

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = artellapipe/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =