[metadata]
name = artellapipe
description = Framework to create generic Artella based pipelines
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpDcc-libs-qt==0.0.17
    pyblish-base==1.8.7
    pyblish-lite==0.8.6
    python-json-logger==0.1.11
    sentry-sdk==0.16.5
    slackclient==2.8.0
    FileSeq==1.10.0

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = artellapipe/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =